--- a/EjercicioGit/Base.lproj/Main.storyboard
+++ b/EjercicioGit/Base.lproj/Main.storyboard
@@ -27,6 +27,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZPr-jh-o6U">
                                 <rect key="frame" x="164" y="365" width="46" height="30"/>
                                 <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="Agregar" destination="BYZ-38-t0r" eventType="touchUpInside" id="Wyp-c9-5bg"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -38,9 +41,14 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="botonAgregar" destination="ZPr-jh-o6U" id="FVF-fC-60U"/>
+                        <outlet property="labelTexto" destination="tpR-sA-EFu" id="eAR-r6-aCd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="116" y="118.29085457271366"/>
         </scene>
     </scenes>
 </document>
