--- a/EjercicioGit/Base.lproj/Main.storyboard
+++ b/EjercicioGit/Base.lproj/Main.storyboard
@@ -25,8 +25,8 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZPr-jh-o6U">
-                                <rect key="frame" x="164" y="365" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
+                                <rect key="frame" x="160" y="365" width="55" height="30"/>
+                                <state key="normal" title="Agregar"/>
                                 <connections>
                                     <action selector="Agregar" destination="BYZ-38-t0r" eventType="touchUpInside" id="Wyp-c9-5bg"/>
                                 </connections>
