--- a/EjercicioGit/Base.lproj/Main.storyboard
+++ b/EjercicioGit/Base.lproj/Main.storyboard
@@ -31,6 +31,14 @@
                                     <action selector="Agregar" destination="BYZ-38-t0r" eventType="touchUpInside" id="Wyp-c9-5bg"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bfc-C6-Xcn">
+                                <rect key="frame" x="155" y="271" width="64" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Disminuir"/>
+                                <connections>
+                                    <action selector="Disminuir" destination="BYZ-38-t0r" eventType="touchUpInside" id="175-Km-8TK"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
